--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,110 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-numpy = "^2.1.1"
+numpy = "^1.26.4"
 pandas = "^2.2.2"
-scipy = "^1.14.1"
+scipy = "^1.10.1"
 tqdm = "^4.66.4"
+absl-py = "^2.1.0"
+aiohttp = "^3.9.5"
+aiosignal = "^1.3.1"
+alsa-lib = "^1.2.12"
+anyio = "^4.4.0"
+aom = "^3.6.1"
+argon2-cffi = "^23.1.0"
+arrow = "^1.3.0"
+asttokens = "^2.4.1"
+async-lru = "^2.0.4"
+attrs = "^23.2.0"
+av = "^11.0.0"
+babel = "^2.14.0"
+beautifulsoup4 = "^4.12.3"
+bleach = "^6.1.0"
+blosc = "^1.21.5"
+bokeh = "^3.4.2"
+brotli = "^1.1.0"
+bzip2 = "^1.0.8"
+ca-certificates = "^2024.7.4"
+cachetools = "^5.3.3"
+caiman = "^1.11.1"
+cffi = "^1.16.0"
+charls = "^2.4.2"
+click = "^8.1.7"
+cloudpickle = "^3.0.0"
+cryptography = "^42.0.8"
+cycler = "^0.12.1"
+dask = "^2024.6.2"
+dav1d = "^1.2.1"
+debugpy = "^1.8.1"
+decorator = "^5.1.1"
+distributed = "^2024.6.2"
+entrypoints = "^0.4"
+fsspec = "^2024.6.0"
+gast = "^0.5.4"
+google-auth = "^2.30.0"
+grpcio = "^1.59.3"
+h5py = "^3.11.0"
+holoviews = "^1.19.0"
+httpx = "^0.27.0"
+idna = "^3.7"
+imageio = "^2.34.2"
+ipykernel = "^6.29.4"
+ipython = "^8.25.0"
+ipywidgets = "^8.1.3"
+jinja2 = "^3.1.4"
+joblib = "^1.4.2"
+jsonschema = "^4.22.0"
+jupyter = "^1.0.0"
+keras = "^2.15.0"
+kiwisolver = "^1.4.5"
+lazy_loader = "^0.4"
+libpng = "^1.6.43"
+llvmlite = "^0.43.0"
+lz4 = "^4.3.3"
+markdown = "^3.6"
+matplotlib = "^3.8.4"
+mistune = "^3.0.2"
+munkres = "^1.1.4"
+nbclient = "^0.10.0"
+nbconvert = "^7.16.4"
+nest-asyncio = "^1.6.0"
+networkx = "^3.3"
+numba = "^0.60.0"
+openpyxl = "^3.1.4"
+packaging = "^24.1"
+pillow = "^10.3.0"
+protobuf = "^4.24.4"
+psutil = "^6.0.0"
+pyarrow = "^15.0.0"
+pycparser = "^2.22"
+pygments = "^2.18.0"
+pyopenssl = "^24.0.0"
+pyparsing = "^3.1.2"
+pytz = "^2024.1"
+pyyaml = "^6.0.1"
+scikit-image = "^0.24.0"
+scikit-learn = "^1.5.0"
+send2trash = "^1.8.3"
+setuptools = "^70.1.1"
+six = "^1.16.0"
+sortedcontainers = "^2.4.0"
+tifffile = "^2024.6.18"
+tornado = "^6.4.1"
+traitlets = "^5.14.3"
+typing-extensions = "^4.12.2"
+urllib3 = "^2.2.2"
+wheel = "^0.43.0"
+wrapt = "^1.14.1"
+zarr = "^2.18.2"
+zipp = "^3.19.2"
 
+# Pip dependencies
+[tool.poetry.extras]
+aicspylibczi = "^3.1.2"
+build = "^1.2.1"
+czifile = "^2019.7.2"
+poetry-core = "^1.9.0"
+xmltodict = "^0.13.0"
 
 [build-system]
 requires = ["poetry-core"]
