--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ scikit-learn = "^1.5.0"
 tifffile = "^2024.6.0"
 tqdm = "^4.66.4"
 zarr = "^2.18.2"
+opencv-python = "^4.8.0"
 
 # Pip dependencies
 [tool.poetry.extras]
