--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,10 @@ tifffile = "^2024.6.0"
 tqdm = "^4.66.4"
 zarr = "^2.18.2"
 opencv-python = "^4.8.0"
+sqlalchemy = "^2.0.35"
+psycopg2-binary = "^2.9.9"
+pypika = "^0.48.9"
+python-dotenv = "^1.0.1"
 
 # Pip dependencies
 [tool.poetry.extras]
