--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,9 @@ psycopg2-binary = "^2.9.9"
 pypika = "^0.48.9"
 python-dotenv = "^1.0.1"
 
+[tootl.poetry.dev-dependencies]
+google-cloud-storage = "^2.18.2"
+
 # Pip dependencies
 [tool.poetry.extras]
 aicspylibczi = ["aicspylibczi"]
