fixed typo in pyproject toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ psycopg2-binary = "^2.9.9"
 pypika = "^0.48.9"
 python-dotenv = "^1.0.1"
 
-[tootl.poetry.dev-dependencies]
+[tool.poetry.dev-dependencies]
 google-cloud-storage = "^2.18.2"
 pytest = "^8.3.3"
 
