--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ psutil = "^6.0.0"
 pynwb = "^2.8.0"
 scikit-image = "^0.24.0"
 scikit-learn = "^1.5.0"
+statsmodels = "^0.14.0"
+jinja2 = "^3.1.0"
 tensorflow = "^2.15.0"
 tifffile = "^2024.6.0"
 tqdm = "^4.66.4"
