--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ caiman = {git = "https://github.com/flatironinstitute/CaImAn.git", tag = "v1.11.
 h5py = "^3.11.0"
 holoviews = "^1.19.0"
 ipykernel = "^6.29.4"
+traitlets = "^5.14.3"
+jupyter-client = "^8.6.2"   
+jupyter-core = "^5.7.2"    
 ipyparallel = "^8.8.0"
 ipython = "^8.0.0"
 ipywidgets = "^8.1.3"
